[refactor] Resolve sonar issue